fix: erro identidade

--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
     </div>
     <div class="container">
         <div class="tree">
-            <ul class="tree-root">
+            <ul class="tree-root-diretor">
                 <li class="tree-node">
-                    <a href="#" class="node-link">
+                    <a href="#" class="node-link-diretor">
                         <img src="imagens/murilo.jpg" alt="Presidente Image" class="node-image">
                         <span class="node-label">Murilo</span>
                         <p class="node-label-cargo">DIRETOR</p>
                     </a>
-                    <ul class="tree-root">
+                    <ul class="tree-root-gestao">
                         <ul class="tree-children">
-                            <li class="tree-node">
+                            <li class="tree-node-gestao-setor">
                                 <a href="#" class="node-link setor" id="gestao-link">
                                     <img src="images/2.jpg" alt="Setor Image" class="node-image">
                                     <span class="node-label">Gestão</span>
@@ -297,6 +297,38 @@
                         </li>
                     </ul>
                 </li>
+                <li class="tree-node">
+                    <a href="#" class="node-link setor">
+                        <img src="images/2.jpg" alt="Setor Image" class="node-image">
+                        <span class="node-label">Aux. Serviços Gerais</span>
+                        <p class="node-label-cargo"></p>
+                    </a>
+                    <ul class="coordenadores">
+                        <li class="tree-node">
+                            <a href="#" class="node-link coordenador">
+                                <img src="imagens/maysa.jpg" alt="Coordenador Image" class="node-image">
+                                <span class="node-label">Maysa</span>
+                                <p class="node-label-cargo">SERVIDORA</p>
+                            </a>
+                            <ul class="funcionarios">
+                                <li class="tree-node">
+                                    <a href="#" class="node-link">
+                                        <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                        <span class="node-label">jackson</span>
+                                        <p class="node-label-cargo">ESTAGIÁRIO</p>
+                                    </a>
+                                </li>
+                                <li class="tree-node">
+                                    <a href="#" class="node-link">
+                                        <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                        <span class="node-label">?</span>
+                                        <p class="node-label-cargo">ESTAGIÁRIO</p>
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
                 <li class="tree-node parceiro-setor">
                     <a href="#" class="node-link setor">
                         <img src="images/2.jpg" alt="Setor Image" class="node-image">
@@ -469,79 +501,6 @@
                 </li>
                 <ul class="tree-root-general">
                     <a href="#" class="node-link-chefe">
-                        <img src="imagens/joão marcelo.jpg" alt="Employee Image" class="node-image">
-                        <span class="node-label">João</span>
-                        <p class="node-label-cargo">SERVIDOR</p>
-                    </a>
-                    <li class="tree-node parceiro-setor">
-                        <a href="#" class="node-link setor">
-                            <img src="images/2.jpg" alt="Setor Image" class="node-image">
-                            <span class="node-label">RECEITA FEDERAL</span>
-                            <p class="node-label-cargo">PARCEIRO</p>
-                        </a>
-                        <ul class="funcionarios">
-                            <li class="tree-node">
-                                <a href="#" class="node-link">
-                                    <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                    <span class="node-label">Ana Clara</span>
-                                    <p class="node-label-cargo">ESTAGIÁRIA</p>
-                                </a>
-                            </li>
-                            <li class="tree-node">
-                                <a href="#" class="node-link">
-                                    <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                    <span class="node-label">Kaique</span>
-                                    <p class="node-label-cargo">ESTAGIÁRIO</p>
-                                </a>
-                            </li>
-                            <li class="tree-node">
-                                <a href="#" class="node-link">
-                                    <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                    <span class="node-label">Leonardo</span>
-                                    <p class="node-label-cargo">ESTAGIÁRIO</p>
-                                </a>
-                            </li>
-                            <li class="tree-node">
-                                <a href="#" class="node-link">
-                                    <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                    <span class="node-label">Jhonatan</span>
-                                    <p class="node-label-cargo">ESTAGIÁRIO</p>
-                                </a>
-                            </li>
-                            <li class="tree-node">
-                                <a href="#" class="node-link">
-                                    <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                    <span class="node-label">Gabriela</span>
-                                    <p class="node-label-cargo">ESTAGIÁRIA</p>
-                                </a>
-                            </li>
-                            <li class="tree-node">
-                                <a href="#" class="node-link">
-                                    <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                    <span class="node-label">Rafaela</span>
-                                    <p class="node-label-cargo">ESTAGIÁRIA</p>
-                                </a>
-                            </li>
-                            <li class="tree-node">
-                                <a href="#" class="node-link">
-                                    <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                    <span class="node-label">Kaiki</span>
-                                    <p class="node-label-cargo">ESTAGIÁRIO</p>
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="tree-node parceiro-setor">
-                        <a href="#" class="node-link setor">
-                            <img src="images/2.jpg" alt="Setor Image" class="node-image">
-                            <span class="node-label">JUNTA MILITAR</span>
-                            <p class="node-label-cargo">PARCEIRO</p>
-                        </a>
-                    </li>
-                </ul>
-                </li>
-                <ul class="tree-root-general">
-                    <a href="#" class="node-link-chefe">
                         <img src="imagens/chantelli.jpg" alt="Employee Image" class="node-image">
                         <span class="node-label">Chantelli</span>
                         <p class="node-label-cargo">SERVIDOR</p>
@@ -555,8 +514,8 @@
                             <ul class="funcionarios">
                                 <li class="tree-node">
                                     <a href="#" class="node-link funcionario">
-                                        <img src="imagens/carlos borchardt.jpg" alt="Coordenador Image" class="node-image">
-                                        <span class="node-label">Carlos</span>
+                                        <img src="imagens/francisca.jpg" alt="Coordenador Image" class="node-image">
+                                        <span class="node-label">Francisca</span>
                                         <p class="node-label-cargo">SERVIDOR</p>
                                     </a>
                                     </li>
@@ -642,6 +601,79 @@
                                     </a>
                                 </li>
                             </ul>
+                        </li>
+                        <ul class="tree-root-general">
+                            <a href="#" class="node-link-chefe">
+                                <img src="imagens/joão marcelo.jpg" alt="Employee Image" class="node-image">
+                                <span class="node-label">João</span>
+                                <p class="node-label-cargo">SERVIDOR</p>
+                            </a>
+                            <li class="tree-node parceiro-setor">
+                                <a href="#" class="node-link setor">
+                                    <img src="images/2.jpg" alt="Setor Image" class="node-image">
+                                    <span class="node-label">RECEITA FEDERAL</span>
+                                    <p class="node-label-cargo">PARCEIRO</p>
+                                </a>
+                                <ul class="funcionarios">
+                                    <li class="tree-node">
+                                        <a href="#" class="node-link">
+                                            <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                            <span class="node-label">Ana Clara</span>
+                                            <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                        </a>
+                                    </li>
+                                    <li class="tree-node">
+                                        <a href="#" class="node-link">
+                                            <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                            <span class="node-label">Kaique</span>
+                                            <p class="node-label-cargo">ESTAGIÁRIO</p>
+                                        </a>
+                                    </li>
+                                    <li class="tree-node">
+                                        <a href="#" class="node-link">
+                                            <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                            <span class="node-label">Leonardo</span>
+                                            <p class="node-label-cargo">ESTAGIÁRIO</p>
+                                        </a>
+                                    </li>
+                                    <li class="tree-node">
+                                        <a href="#" class="node-link">
+                                            <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                            <span class="node-label">Jhonatan</span>
+                                            <p class="node-label-cargo">ESTAGIÁRIO</p>
+                                        </a>
+                                    </li>
+                                    <li class="tree-node">
+                                        <a href="#" class="node-link">
+                                            <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                            <span class="node-label">Gabriela</span>
+                                            <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                        </a>
+                                    </li>
+                                    <li class="tree-node">
+                                        <a href="#" class="node-link">
+                                            <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                            <span class="node-label">Rafaela</span>
+                                            <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                        </a>
+                                    </li>
+                                    <li class="tree-node">
+                                        <a href="#" class="node-link">
+                                            <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                            <span class="node-label">Kaiki</span>
+                                            <p class="node-label-cargo">ESTAGIÁRIO</p>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="tree-node parceiro-setor">
+                                <a href="#" class="node-link setor">
+                                    <img src="images/2.jpg" alt="Setor Image" class="node-image">
+                                    <span class="node-label">JUNTA MILITAR</span>
+                                    <p class="node-label-cargo">PARCEIRO</p>
+                                </a>
+                            </li>
+                        </ul>
                         </li>
                         </li>
                     </ul>
