mod: gestao tree, merge complete

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
     </div>
     <div class="container">
         <div class="tree">
-            <ul class="tree-root-diretor">
+            <ul class="tree-root">
                 <li class="tree-node">
-                    <a href="#" class="node-link-diretor">
+                    <a href="#" class="node-link">
                         <img src="imagens/murilo.jpg" alt="Presidente Image" class="node-image">
                         <span class="node-label">Murilo</span>
                         <p class="node-label-cargo">DIRETOR</p>
                     </a>
-                    <ul class="tree-root-gestao">
+                    <ul class="tree-root">
                         <ul class="tree-children">
                             <li class="tree-node-gestao-setor">
                                 <a href="#" class="node-link setor" id="gestao-link">
