mod: minor changes

--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
                         <p class="node-label-cargo">DIRETOR</p>
                     </a>
                     <ul class="tree-root">
-                        <ul class="tree-children">
                             <li class="tree-node-gestao-setor">
                                 <a href="#" class="node-link setor" id="gestao-link">
                                     <img src="images/2.jpg" alt="Setor Image" class="node-image">
@@ -707,6 +706,7 @@
                     </li>
                 </ul>
             </li>
+        <ul class="tree-children"></ul>
             <li class="tree-node parceiro-setor">
                 <a href="#" class="node-link setor">
                     <img src="images/2.jpg" alt="Setor Image" class="node-image">
@@ -720,18 +720,34 @@
                             <span class="node-label">Chantelli</span>
                             <p class="node-label-cargo">SERVIDORA</p>
                         </a>
-                        <ul class="coordenadores">
+                        <ul class="funcionarios">
                             <li class="tree-node">
                                 <a href="#" class="node-link funcionario">
                                     <img src="imagens/carlos borchardt.jpg" alt="Coordenador Image" class="node-image">
                                     <span class="node-label">FRANCISCA</span>
                                     <p class="node-label-cargo">SERVIDORA</p>
                                 </a>
+                            <ul class="tree-children"
+                                <ul class="funcionarios">
+                                    <li class="tree-node">
+                                        <a href="#" class="node-link funcionario">
+                                            <img src="imagens/none.png" alt="Coordenador Image" class="node-image">
+                                            <span class="node-label">?</span>
+                                            <p class="node-label-cargo">ESTÁGIARIO</p>
+                                        </a>
+                                    <li class="tree-node">
+                                        <a href="#" class="node-link funcionario">
+                                            <img src="imagens/none.png" alt="Coordenador Image" class="node-image">
+                                            <span class="node-label">?</span>
+                                            <p class="node-label-cargo">ESTÁGIARIO</p>
+                                        </a>
+                                    </li>
+                                </ul>
                             </li>
                         </ul>
                     </li>
-                </ul>
-            </li>
+                </li>
+            </ul>
             <li class="tree-node parceiro-setor">
                 <a href="#" class="node-link setor">
                     <img src="images/2.jpg" alt="Setor Image" class="node-image">
