--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <ul class="tree-root">
                             <li class="tree-node-gestao-setor">
                                 <a href="#" class="node-link setor" id="gestao-link">
-                                    <img src="images/2.jpg" alt="Setor Image" class="node-image">
+                                    <img src="imagens/simplifica.jpg" alt="Setor Image" class="node-image">
                                     <span class="node-label">Gestão</span>
                                 </a>
                                 <ul class="coordenadores">
@@ -329,7 +329,7 @@
                             </a>
                         </li>
                     </ul>
-                </li>
+                </li> <!--AUX. SERVIÇOS GERAIS-->
                 <li class="tree-node parceiro-setor">
                     <a href="#" class="node-link setor">
                         <img src="imagens/logo-empreendedor.png" alt="Setor Image" class="node-image">
@@ -406,7 +406,7 @@
                                 </ul>
                         </li>
                     </ul>
-                </li>
+                </li> <!--SALA DO EMPREENDEDOR-->
             </ul>
             </li>
             <li class="tree-node parceiro-setor">
@@ -558,7 +558,7 @@
                         </ul>
                     </li>
                 </ul>
-            </li>
+            </li> <!--SAMAE-->
             <li class="tree-node parceiro-setor">
                 <a href="#" class="node-link setor">
                     <img src="imagens/procon.png" alt="Setor Image" class="node-image">
@@ -630,7 +630,7 @@
                             </ul>
                     </li>
                 </ul>
-            </li>
+            </li> <!--PROCON-->
             </ul>
             </li>
             <li class="tree-node parceiro-setor">
@@ -689,7 +689,7 @@
                         </ul>
                     </li>
                 </ul>
-            </li>
+            </li> <!--RECEITA-->
             <li class="tree-node parceiro-setor">
                 <a href="#" class="node-link setor">
                     <img src="imagens/junta-militar-logo.png" alt="Setor Image" class="node-image">
@@ -705,7 +705,7 @@
                         </a>
                     </li>
                 </ul>
-            </li>
+            </li> <!--JUNTA-->
         <ul class="tree-children"></ul>
             <li class="tree-node parceiro-setor">
                 <a href="#" class="node-link setor">
@@ -746,7 +746,7 @@
                             </li>
                         </ul>
                     </li>
-                </li>
+                </li> <!--DEMUTRAN-->
             </ul>
             <li class="tree-node parceiro-setor">
                 <a href="#" class="node-link setor">
@@ -833,7 +833,7 @@
                         </ul>
                     </li>
                 </ul>
-            </li>
+            </li> <!--IDENTIDADE-->
             </ul>
         </div>
     </div>
