upd:est. tributos

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <ul class="tree-root">
                             <li class="tree-node-gestao-setor">
                                 <a href="#" class="node-link setor" id="gestao-link">
-                                    <img src="imagens/simplifica.jpg" alt="Setor Image" class="node-image">
+                                    <img src="imagens/simplifica-removebg-preview.png" alt="Setor Image" class="node-image">
                                     <span class="node-label">Gestão</span>
                                 </a>
                                 <ul class="coordenadores">
@@ -245,7 +245,21 @@
                                     <a href="#" class="node-link">
                                         <img src="imagens/ricardo.jpg" alt="Employee Image" class="node-image">
                                         <span class="node-label">Ricardo</span>
-                                        <p class="node-label-cargo">ESTAGIÁRIA</p>
+                                        <p class="node-label-cargo">ESTAGIÁRIO</p>
+                                    </a>
+                                </li>
+                                <li class="tree-node">
+                                    <a href="#" class="node-link">
+                                        <img src="imagens/joão arthur.jpg" alt="Employee Image" class="node-image">
+                                        <span class="node-label">João</span>
+                                        <p class="node-label-cargo">ESTAGIÁRIO</p>
+                                    </a>
+                                </li>
+                                <li class="tree-node">
+                                    <a href="#" class="node-link">
+                                        <img src="imagens/plinio.jpg" alt="Employee Image" class="node-image">
+                                        <span class="node-label">Plínio</span>
+                                        <p class="node-label-cargo">ESTAGIÁRIO</p>
                                     </a>
                                 </li>
                             </ul>
