mod:fotos sala empree.

--- a/index.html
+++ b/index.html
@@ -371,50 +371,44 @@
                                 <ul class="funcionarios">
                                     <li class="tree-node">
                                         <a href="#" class="node-link">
-                                            <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                            <span class="node-label">Sub-Funcionario 1</span>
+                                            <img src="imagens/tabata.jpg" alt="Employee Image" class="node-image">
+                                            <span class="node-label">Tabata</span>
+                                            <p class="node-label-cargo">ESTAGIÁRIA</p>
                                         </a>
                                     </li>
                                     <li class="tree-node">
                                         <a href="#" class="node-link">
-                                            <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                            <span class="node-label">Sub-Funcionario 2</span>
+                                            <img src="imagens/bibiana.jpg" alt="Employee Image" class="node-image">
+                                            <span class="node-label">Bibiana</span>
+                                            <p class="node-label-cargo">ESTAGIÁRIA</p>
                                         </a>
                                     </li>
                                     <li class="tree-node">
                                         <a href="#" class="node-link">
-                                            <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                            <span class="node-label">Sub-Funcionario 1</span>
+                                            <img src="imagens/paulo.jpg" alt="Employee Image" class="node-image">
+                                            <span class="node-label">Paulo</span>
+                                            <p class="node-label-cargo">ESTAGIÁRIO</p>
                                         </a>
                                     </li>
                                     <li class="tree-node">
                                         <a href="#" class="node-link">
-                                            <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                            <span class="node-label">Sub-Funcionario 2</span>
+                                            <img src="imagens/jean.jpg" alt="Employee Image" class="node-image">
+                                            <span class="node-label">Jean</span>
+                                            <p class="node-label-cargo">ESTAGIÁRIO</p>
                                         </a>
                                     </li>
                                     <li class="tree-node">
                                         <a href="#" class="node-link">
-                                            <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                            <span class="node-label">Sub-Funcionario 1</span>
+                                            <img src="imagens/joanita.jpg" alt="Employee Image" class="node-image">
+                                            <span class="node-label">Joanita</span>
+                                            <p class="node-label-cargo">ESTAGIÁRIA</p>
                                         </a>
                                     </li>
                                     <li class="tree-node">
                                         <a href="#" class="node-link">
-                                            <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                            <span class="node-label">Sub-Funcionario 2</span>
-                                        </a>
-                                    </li>
-                                    <li class="tree-node">
-                                        <a href="#" class="node-link">
-                                            <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                            <span class="node-label">Sub-Funcionario 1</span>
-                                        </a>
-                                    </li>
-                                    <li class="tree-node">
-                                        <a href="#" class="node-link">
-                                            <img src="imagens/none.png" alt="Employee Image" class="node-image">
-                                            <span class="node-label">Sub-Funcionario 2</span>
+                                            <img src="imagens/debora.jpg" alt="Employee Image" class="node-image">
+                                            <span class="node-label">Debora</span>
+                                            <p class="node-label-cargo">ESTAGIÁRIA</p>
                                         </a>
                                     </li>
                                 </ul>
